--- a/athens.html
+++ b/athens.html
@@ -126,7 +126,7 @@
                     </p>
 
                     <div class="explore-button1">
-                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=10261722" class="unique-button1">προβολή ξενοδοχείου</a>
+                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=10261722" target="_blank" class="unique-button1">προβολή ξενοδοχείου</a>
                     </div>
                 </div>
             </div>
@@ -152,7 +152,7 @@
                         και εστιατόριο στην ταράτσα. Ιδανική επιλογή για περιηγήσεις στο ιστορικό τρίγωνο με τα πόδια.
                     </p>
                     <div class="explore-button1">
-                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=9360084" class="unique-button1">προβολή ξενοδοχείου</a>
+                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=9360084" target="_blank" class="unique-button1">προβολή ξενοδοχείου</a>
                     </div>
                 </div>
                 <div class="top-hotel-main" data-aos="fade-left">
@@ -193,7 +193,7 @@
                         και τα κύρια σημεία ενδιαφέροντος.
                     </p>
                     <div class="explore-button1">
-                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=31437945" class="unique-button1">προβολή ξενοδοχείου</a>
+                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=31437945" target="_blank" class="unique-button1">προβολή ξενοδοχείου</a>
                     </div>
                 </div>
             </div>
@@ -220,7 +220,7 @@
                         Παρθενώνα, αποτελεί ήρεμη βάση για εξερεύνηση ή επαγγελματικά ταξίδια.
                     </p>
                     <div class="explore-button1">
-                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=10257324" class="unique-button1">προβολή ξενοδοχείου</a>
+                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=10257324" target="_blank" class="unique-button1">προβολή ξενοδοχείου</a>
                     </div>
                 </div>
                 <div class="top-hotel-main" data-aos="fade-left">
@@ -260,7 +260,7 @@
                         καθαρά δωμάτια, κοντά σε γκαλερί, street food και ζωντανή πόλη.
                     </p>
                     <div class="explore-button1">
-                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=2090399" class="unique-button1">προβολή ξενοδοχείου</a>
+                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=2090399" target="_blank" class="unique-button1">προβολή ξενοδοχείου</a>
                     </div>
                 </div>
             </div>
@@ -287,7 +287,7 @@
                         καθαρά, ήσυχα δωμάτια. Μόλις λίγα μέτρα από τον πεζόδρομο Διονυσίου Αρεοπαγίτου.
                     </p>
                     <div class="explore-button1">
-                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=62324" class="unique-button1">προβολή ξενοδοχείου</a>
+                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=62324" target="_blank" class="unique-button1">προβολή ξενοδοχείου</a>
                     </div>
                 </div>
                 <div class="top-hotel-main" data-aos="fade-left">
@@ -328,7 +328,7 @@
                         κέντρο.
                     </p>
                     <div class="explore-button1">
-                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=8099318" class="unique-button1">προβολή ξενοδοχείου</a>
+                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=8099318" target="_blank" class="unique-button1">προβολή ξενοδοχείου</a>
                     </div>
                 </div>
             </div>
@@ -356,7 +356,7 @@
                         στα αξιοθέατα είναι άμεση.
                     </p>
                     <div class="explore-button1">
-                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=1397187" class="unique-button1">προβολή ξενοδοχείου</a>
+                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=1397187" target="_blank" class="unique-button1">προβολή ξενοδοχείου</a>
                     </div>
                 </div>
                 <div class="top-hotel-main" data-aos="fade-left">
