--- a/patras.html
+++ b/patras.html
@@ -49,7 +49,7 @@
 
 
         <!-- Banner Section Start -->
-        <div class="high-stakes-banner" style="background:url(assets/images/patra-banner.jpg);">
+        <div class="high-stakes-banner" style="background:url(assets/images/patras-banner.jpg.jpg);">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
@@ -121,7 +121,7 @@
                         Ένα μικρό design ξενοδοχείο σε αναπαλαιωμένο νεοκλασικό κτήριο. Με προσεγμένα δωμάτια και ήσυχη τοποθεσία, είναι ιδανικό για ταξιδιώτες που αναζητούν κάτι ξεχωριστό και αυθεντικό.
                     </p>
                     <div class="explore-button1">
-                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=243730" class="unique-button1">προβολή ξενοδοχείου</a>
+                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=243730" target="_blank" class="unique-button1">προβολή ξενοδοχείου</a>
                     </div>
                 </div>
             </div>
@@ -145,7 +145,7 @@
                         Καθαρό, λειτουργικό και πρακτικό. Το Airotel Patras Smart βρίσκεται λίγα λεπτά από το λιμάνι και είναι ιδανικό για ταξιδιώτες σε διέλευση ή επαγγελματικά ραντεβού.
                     </p>
                     <div class="explore-button1">
-                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=227471" class="unique-button1">προβολή ξενοδοχείου</a>
+                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=227471" target="_blank" class="unique-button1">προβολή ξενοδοχείου</a>
                     </div>
                 </div>
                 <div class="top-hotel-main"  data-aos="fade-left">
@@ -179,7 +179,7 @@
                         Ένα ξενοδοχείο με χαρακτήρα και διακριτική πολυτέλεια στο εμπορικό κέντρο της Πάτρας. Διαθέτει άνετα δωμάτια και φιλική ατμόσφαιρα με ιδιαίτερο στιλ.
                     </p>
                     <div class="explore-button1">
-                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=143619" class="unique-button1">προβολή ξενοδοχείου</a>
+                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=143619" target="_blank" class="unique-button1">προβολή ξενοδοχείου</a>
                     </div>
                 </div>
             </div>
@@ -204,7 +204,7 @@
                         Μια καλή επιλογή για digital nomads ή ζευγάρια. Το City Loft προσφέρει την αίσθηση διαμερίσματος με την ασφάλεια και την υποστήριξη ενός ξενοδοχείου.
                     </p>
                     <div class="explore-button1">
-                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=376155" class="unique-button1">προβολή ξενοδοχείου</a>
+                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=376155" target="_blank" class="unique-button1">προβολή ξενοδοχείου</a>
                     </div>
                 </div>
                 <div class="top-hotel-main"  data-aos="fade-left">
@@ -238,7 +238,7 @@
                         Λίγο έξω από το κέντρο της Πάτρας, προσφέρει θέα στον Πατραϊκό κόλπο και resort παροχές. Ιδανικό για καλοκαιρινές διακοπές ή διαμονή με αυτοκίνητο.
                     </p>
                     <div class="explore-button1">
-                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=58650349" class="unique-button1">προβολή ξενοδοχείου</a>
+                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=58650349" target="_blank" class="unique-button1">προβολή ξενοδοχείου</a>
                     </div>
                 </div>
             </div>
@@ -263,7 +263,7 @@
                         Γνωστό και σταθερό ξενοδοχείο για δεκαετίες. Λίγο παλαιό σε στυλ, αλλά με τα βασικά που χρειάζονται οι ταξιδιώτες και εκπληκτική θέα από την ταράτσα.
                     </p>
                     <div class="explore-button1">
-                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=37841691" class="unique-button1">προβολή ξενοδοχείου</a>
+                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=37841691" target="_blank" class="unique-button1">προβολή ξενοδοχείου</a>
                     </div>
                 </div>
                 <div class="top-hotel-main"  data-aos="fade-left">
@@ -281,7 +281,7 @@
             <div class="top-hotel-inner">
                 <div class="top-hotel-main"  data-aos="fade-right">
                     <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=13830734" target="_blank">
-                        <div class="top-hotel-img" style="background-image: url(assets/images/patras-hotel7.jpg);"></div>
+                        <div class="top-hotel-img" style="background-image: url(assets/images/patras-hotel9.jpg);"></div>
                     </a>
                 </div>
                 <div class="top-hotel-text"  data-aos="fade-left">
@@ -297,7 +297,7 @@
                         Ακριβώς απέναντι από το λιμάνι και κοντά στον πεζόδρομο της Αγίου Νικολάου, είναι μία από τις πιο γνωστές επιλογές της πόλης για επαγγελματικά ταξίδια και σύντομες διαμονές.
                     </p>
                     <div class="explore-button1">
-                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=13830734" class="unique-button1">προβολή ξενοδοχείου</a>
+                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=13830734" target="_blank" class="unique-button1">προβολή ξενοδοχείου</a>
                     </div>
                 </div>
             </div>
@@ -322,7 +322,7 @@
                         Καθαρό, απλό και καλά τοποθετημένο για ταξιδιώτες που θέλουν κάτι λειτουργικό και προσιτό για 1–2 βραδιές στο κέντρο της Πάτρας.
                     </p>
                     <div class="explore-button1">
-                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=163457" class="unique-button1">προβολή ξενοδοχείου</a>
+                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=163457" target="_blank" class="unique-button1">προβολή ξενοδοχείου</a>
                     </div>
                 </div>
                 <div class="top-hotel-main" data-aos="fade-left">
