--- a/thessaloniki.html
+++ b/thessaloniki.html
@@ -119,7 +119,7 @@
                     Σε κτήριο του 1920, κοντά στην εμπορική καρδιά της πόλης, το Modernist συνδυάζει minimal αισθητική με λειτουργικότητα. Τα δωμάτια είναι μικρά αλλά προσεγμένα, και η τοποθεσία ιδανική για περπάτημα προς τη θάλασσα και τα μπαρ του Λαδάδικου.
                 </p>
                 <div class="explore-button1">
-                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=31437324" class="unique-button1">προβολή ξενοδοχείου</a>
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=31437324" target="_blank" class="unique-button1">προβολή ξενοδοχείου</a>
                 </div>
             </div>
         </div>
@@ -143,7 +143,7 @@
                     Ένα από τα πιο αναγνωρίσιμα ξενοδοχεία της πόλης, με θέα στο Θερμαϊκό και κορυφαία τοποθεσία. Μεγάλα δωμάτια, επαγγελματικό προσωπικό και άμεση πρόσβαση σε εμπορικά και πολιτιστικά σημεία.
                 </p>
                 <div class="explore-button1">
-                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=10256803" class="unique-button1">προβολή ξενοδοχείου</a>
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=10256803" target="_blank" class="unique-button1">προβολή ξενοδοχείου</a>
                 </div>
             </div>
             <div class="top-hotel-main" data-aos="fade-left">
@@ -177,7 +177,7 @@
                     Ένα πολύχρωμο, μοντέρνο ξενοδοχείο με ανεπιτήδευτο χαρακτήρα και προσοχή στις λεπτομέρειες. Ταιριάζει σε νεότερους ταξιδιώτες ή ζευγάρια που θέλουν ατμόσφαιρα και λειτουργικότητα μαζί.
                 </p>
                 <div class="explore-button1">
-                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=1651947" class="unique-button1">προβολή ξενοδοχείου</a>
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=1651947" target="_blank" class="unique-button1">προβολή ξενοδοχείου</a>
                 </div>
             </div>
         </div>
@@ -202,7 +202,7 @@
                     Δίπλα στην παραλιακή, με ιστορικό όνομα και σύγχρονες ανέσεις. Ιδανικό για συνέδρια, δεξιώσεις ή πολυτελείς αποδράσεις με έμφαση στην άνεση και την τοποθεσία.
                 </p>
                 <div class="explore-button1">
-                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=10257403" class="unique-button1">προβολή ξενοδοχείου</a>
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=10257403" target="_blank" class="unique-button1">προβολή ξενοδοχείου</a>
                 </div>
             </div>
             <div class="top-hotel-main"  data-aos="fade-left">
@@ -236,7 +236,7 @@
                     Λίγο έξω από το κέντρο, στην περιοχή του λιμανιού, το Met προσφέρει ησυχία, τέχνη και αίσθηση ευρυχωρίας. Η ταράτσα του ξεχωρίζει, όπως και ο χαρακτήρας του — ιδανικό για επαγγελματίες ή μεγαλύτερες διαμονές.
                 </p>
                 <div class="explore-button1">
-                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=65477587" class="unique-button1">προβολή ξενοδοχείου</a>
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=65477587" target="_blank" class="unique-button1">προβολή ξενοδοχείου</a>
                 </div>
             </div>
         </div>
@@ -261,7 +261,7 @@
                     Ένα από τα μεγαλύτερα ξενοδοχεία της πόλης. Χωρίς περιττές υπερβολές, αλλά με συνέπεια, καθαριότητα και σταθερή ποιότητα σε πολύ καλή τοποθεσία.
                 </p>
                 <div class="explore-button1">
-                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=548372" class="unique-button1">προβολή ξενοδοχείου</a>
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=548372" target="_blank" class="unique-button1">προβολή ξενοδοχείου</a>
                 </div>
             </div>
             <div class="top-hotel-main"  data-aos="fade-left">
@@ -296,7 +296,7 @@
                     Ένα προσεγμένο, φιλόξενο ξενοδοχείο σε ήσυχο σημείο κοντά στη Μοδιάνο. Καθαρά δωμάτια, φιλικό προσωπικό και αίσθηση άνεσης με σωστή τιμολόγηση.
                 </p>
                 <div class="explore-button1">
-                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=1566392" class="unique-button1">προβολή ξενοδοχείου</a>
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=1566392" target="_blank" class="unique-button1">προβολή ξενοδοχείου</a>
                 </div>
             </div>
         </div>
@@ -321,7 +321,7 @@
                     Το ONOMA φέρνει διαφορετική φιλοσοφία: εφαρμογές, χρώμα, θεματικά events και εμπειρίες σχεδιασμένες για σύγχρονους ταξιδιώτες. Μια εναλλακτική πρόταση με urban χαρακτήρα.
                 </p>
                 <div class="explore-button1">
-                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=26957092" class="unique-button1">προβολή ξενοδοχείου</a>
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=26957092" target="_blank" class="unique-button1">προβολή ξενοδοχείου</a>
                 </div>
             </div>
             <div class="top-hotel-main"  data-aos="fade-left">
