--- a/contact.html
+++ b/contact.html
@@ -112,7 +112,7 @@
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="contact-form-inner" data-aos="fade-down-left"  data-aos="fade-down-left">
+                        <div class="contact-form-inner" data-aos="fade-down-left" >
                             <h2>Φόρμα Επικοινωνίας</h2>
 
                             <form id="contact_form" method="POST" enctype="multipart/form-data">
