--- a/athens.html
+++ b/athens.html
@@ -592,7 +592,7 @@
 
                 <!-- 01 -->
                 <div class="listing" data-aos="fade-up-right">
-                    <a href="blog-posts">
+                    <a href="athens-blogpost">
                         <div class="read-more-main">
                             <div class="read-more-img"
                                 style="background-image: url(assets/images/roftop-bar-hotel-img.jpg);"></div>
@@ -603,7 +603,7 @@
 
                 <!-- 02 -->
                 <div class="listing" data-aos="fade-up">
-                    <a href="blog-posts">
+                    <a href="athens-blogpost">
                         <div class="read-more-main">
                             <div class="read-more-img" style="background-image: url(assets/images/roftop-img2.jpg);">
                             </div>
@@ -614,7 +614,7 @@
 
                 <!-- 03 -->
                 <div class="listing" data-aos="fade-up-left">
-                    <a href="blog-posts">
+                    <a href="athens-blogpost">
                         <div class="read-more-main">
                             <div class="read-more-img" style="background-image: url(assets/images/roftop-img3.jpg);">
                             </div>
