--- a/index.html
+++ b/index.html
@@ -270,8 +270,8 @@
       
           <!-- 03 -->
           <div class="listing"  data-aos="fade-down-left">
-            <a href="">
-                <div class="home-blogpost">
+            <a href="home-blogpost">
+                <div class="read-more-main">
                 <div class="read-more-img" style="background-image: url(assets/images/golf-resorts-in-the-greek-Islands.webp);"></div>
             </div>
               <h3>Θέρετρα Γκολφ στα Ελληνικά Νησιά</h3>
