--- a/blog-posts.html
+++ b/blog-posts.html
@@ -37,7 +37,7 @@
                         <li class="nav-item"><a href="patras">Πάτρα</a></li>
                         <li class="nav-item"><a href="blog-posts" class="active">Αναρτήσεις Blog</a></li>
                         <li class="nav-item"><a href="contact">Επικοινωνήστε</a></li>
-                        <li class="nav-item"><a href="relatively">Σχετικά</a></li>
+                        <li class="nav-item"><a href="about">Σχετικά</a></li>
 
                     </ul>
                 </nav>
