--- a/patras.html
+++ b/patras.html
@@ -38,7 +38,7 @@
                         <li class="nav-item"><a href="patras" class="active">Πάτρα</a></li>
                         <li class="nav-item"><a href="blog-posts">Αναρτήσεις Blog</a></li>
                         <li class="nav-item"><a href="contact">Επικοινωνήστε</a></li>
-                        <li class="nav-item"><a href="relatively">Σχετικά</a></li>
+                        <li class="nav-item"><a href="about">Σχετικά</a></li>
 
                     </ul>
                 </nav>
