--- a/home-blogpost.html
+++ b/home-blogpost.html
@@ -211,18 +211,17 @@
                                     </li>
                                 </ul>
                                 <h5>
-                                    Τι να Περιμένετε
+                                    Παροχές στα Θέρετρα
                                 </h5>
                                 <ul>
                                     <li>
-                                        Εσωτερική πολυτέλεια με πλήρως εξοπλισμένες κουζίνες και design επίπλωση
+                                        Ενοικίαση εξοπλισμού, προσωπικά μαθήματα, γήπεδα άσκησης
                                     </li>
                                     <li>
-                                        Ιδιωτικές πισίνες, υπαίθριες τραπεζαρίες και ησυχία
+                                        Spa, fine dining και εμπειρίες για όσους δεν παίζουν
                                     </li>
                                     <li>
-                                        Concierge, private chefs, ακόμη και πρόσβαση με ελικόπτερο σε ορισμένες
-                                        περιπτώσεις
+                                        Εύκολη πρόσβαση σε αεροδρόμια και παραλίες
                                     </li>
                                 </ul>
                             </div>
