--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
             </div>
             <div class="row">
                 <!-- 01 -->
-                <div class="col-md-4">
-                    <div class="why-choose"  data-aos="fade-up-right">
+                <div class="col-md-4" data-aos="fade-up-right">
+                    <div class="why-choose"  >
                         <div class="why-choose-img">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512">
                                 <path
@@ -198,8 +198,8 @@
                     </div>
                 </div>
                 <!-- 02 -->
-                <div class="col-md-4">
-                    <div class="why-choose"  data-aos="fade-up">
+                <div class="col-md-4" data-aos="fade-up">
+                    <div class="why-choose"  >
                         <div class="why-choose-img">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M0 32C0 14.3 14.3 0 32 0L480 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l0 384c17.7 0 32 14.3 32 32s-14.3 32-32 32l-176 0 0-48c0-26.5-21.5-48-48-48s-48 21.5-48 48l0 48L32 512c-17.7 0-32-14.3-32-32s14.3-32 32-32L32 64C14.3 64 0 49.7 0 32zm96 80l0 32c0 8.8 7.2 16 16 16l32 0c8.8 0 16-7.2 16-16l0-32c0-8.8-7.2-16-16-16l-32 0c-8.8 0-16 7.2-16 16zM240 96c-8.8 0-16 7.2-16 16l0 32c0 8.8 7.2 16 16 16l32 0c8.8 0 16-7.2 16-16l0-32c0-8.8-7.2-16-16-16l-32 0zm112 16l0 32c0 8.8 7.2 16 16 16l32 0c8.8 0 16-7.2 16-16l0-32c0-8.8-7.2-16-16-16l-32 0c-8.8 0-16 7.2-16 16zM112 192c-8.8 0-16 7.2-16 16l0 32c0 8.8 7.2 16 16 16l32 0c8.8 0 16-7.2 16-16l0-32c0-8.8-7.2-16-16-16l-32 0zm112 16l0 32c0 8.8 7.2 16 16 16l32 0c8.8 0 16-7.2 16-16l0-32c0-8.8-7.2-16-16-16l-32 0c-8.8 0-16 7.2-16 16zm144-16c-8.8 0-16 7.2-16 16l0 32c0 8.8 7.2 16 16 16l32 0c8.8 0 16-7.2 16-16l0-32c0-8.8-7.2-16-16-16l-32 0zM328 384c13.3 0 24.3-10.9 21-23.8c-10.6-41.5-48.2-72.2-93-72.2s-82.5 30.7-93 72.2c-3.3 12.8 7.8 23.8 21 23.8l144 0z"/></svg>
                         </div>
@@ -214,8 +214,8 @@
                     </div>
                 </div>
                 <!-- 03 -->
-                <div class="col-md-4">
-                    <div class="why-choose"  data-aos="fade-up-left">
+                <div class="col-md-4" data-aos="fade-up-left">
+                    <div class="why-choose"  >
                         <div class="why-choose-img">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                                 <path
