--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
                         <li class="nav-item"><a href="patras">Πάτρα</a></li>
                         <li class="nav-item"><a href="blog-posts">Αναρτήσεις Blog</a></li>
                         <li class="nav-item"><a href="contact">Επικοινωνήστε</a></li>
-                        <li class="nav-item"><a href="relatively" class="active">Σχετικά</a></li>
+                        <li class="nav-item"><a href="about" class="active">Σχετικά</a></li>
 
                     </ul>
                 </nav>
