--- a/athens.html
+++ b/athens.html
@@ -383,8 +383,8 @@
             </div>
             <div class="row">
                 <!-- 01 -->
-                <div class="col-md-4">
-                    <div class="why-choose" data-aos="fade-up-right">
+                <div class="col-md-4" data-aos="fade-up-right">
+                    <div class="why-choose" >
                         <div class="why-choose-img">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                                 <path
@@ -402,8 +402,8 @@
                     </div>
                 </div>
                 <!-- 02 -->
-                <div class="col-md-4">
-                    <div class="why-choose" data-aos="fade-up">
+                <div class="col-md-4" data-aos="fade-up">
+                    <div class="why-choose" >
                         <div class="why-choose-img">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                                 <path
@@ -421,8 +421,8 @@
                     </div>
                 </div>
                 <!-- 03 -->
-                <div class="col-md-4">
-                    <div class="why-choose" data-aos="fade-up-left">
+                <div class="col-md-4" data-aos="fade-up-left">
+                    <div class="why-choose" >
                         <div class="why-choose-img">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512">
                                 <path
