--- a/thessaloniki.html
+++ b/thessaloniki.html
@@ -346,8 +346,8 @@
         </div>
         <div class="row">
             <!-- 01 -->
-            <div class="col-md-4">
-                <div class="why-choose"  data-aos="fade-down-right">
+            <div class="col-md-4"  data-aos="fade-down-right">
+                <div class="why-choose"  >
                     <div class="why-choose-img">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512">
                             <path d="M372.2 52c0 20.9-12.4 39-30.2 47.2L448 192l104.4-20.9c-5.3-7.7-8.4-17.1-8.4-27.1c0-26.5 21.5-48 48-48s48 21.5 48 48c0 26-20.6 47.1-46.4 48L481 442.3c-10.3 23-33.2 37.7-58.4 37.7l-205.2 0c-25.2 0-48-14.8-58.4-37.7L46.4 192C20.6 191.1 0 170 0 144c0-26.5 21.5-48 48-48s48 21.5 48 48c0 10.1-3.1 19.4-8.4 27.1L192 192 298.1 99.1c-17.7-8.3-30-26.3-30-47.1c0-28.7 23.3-52 52-52s52 23.3 52 52z"/></svg>
@@ -363,8 +363,8 @@
                 </div>
             </div>
             <!-- 02 -->
-            <div class="col-md-4">
-                <div class="why-choose"  data-aos="fade-up">
+            <div class="col-md-4" data-aos="fade-up">
+                <div class="why-choose"  >
                     <div class="why-choose-img">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
                             <path d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"/></svg>
@@ -380,8 +380,8 @@
                 </div>
             </div>
             <!-- 03 -->
-            <div class="col-md-4">
-                <div class="why-choose" data-aos="fade-down-left">
+            <div class="col-md-4"  data-aos="fade-down-left">
+                <div class="why-choose" >
                     <div class="why-choose-img">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                             <path d="M3.9 54.9C10.5 40.9 24.5 32 40 32l432 0c15.5 0 29.5 8.9 36.1 22.9s4.6 30.5-5.2 42.5L320 320.9 320 448c0 12.1-6.8 23.2-17.7 28.6s-23.8 4.3-33.5-3l-64-48c-8.1-6-12.8-15.5-12.8-25.6l0-79.1L9 97.3C-.7 85.4-2.8 68.8 3.9 54.9z"/></svg>
