--- a/blog-posts.html
+++ b/blog-posts.html
@@ -111,7 +111,7 @@
 
 
            <!-- read more ahens section start  -->
-          <section class="read-more pt-80">
+          <section class="read-more mt-20">
             <div class="container">
                 <div class="read-more-heading">
             <!-- <h2>Αθήνα Blogposts</h2> -->
@@ -156,7 +156,7 @@
 
 
           <!-- read more ahens section start -->
-        <section class="read-more pt-80">
+        <section class="read-more mt-20">
             <div class="container">
                 <div class="read-more-heading">
             <!-- <h2>Θεσσαλονίκη Blogposts</h2> -->
@@ -201,7 +201,7 @@
 
 
             <!-- read more ahens section start -->
-        <section class="read-more pt-80">
+        <section class="read-more mt-20">
             <div class="container">
                 <div class="read-more-heading">
             <!-- <h2>Πάτρα</h2> -->
